# crabrave

./: Cargo.toml  config.toml.default  flake.nix
.cargo/: config.toml
src/: app.rs  config.rs  event.rs  handler.rs  lib.rs  main.rs  tui.rs  ui.rs
